2004-10-13  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_audio_encoder.glade:
	* flumotion/component/base/producer.py:
	* flumotion/component/encoders/encoders.xml:
	* flumotion/component/encoders/theora.py:
	* flumotion/component/encoders/vorbis.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/muxers/muxers.xml:
	* flumotion/component/muxers/ogg.py:
	* flumotion/component/soundcard/soundcard.py:
	* flumotion/component/soundcard/soundcard.xml:
	* flumotion/component/videotest/videotest.py:
	* flumotion/component/videotest/videotest.xml:
	* flumotion/component/webcam/webcam.py:
	* flumotion/component/webcam/webcam.xml:
	* flumotion/manager/component.py:
	* flumotion/wizard/wizard_step.py:

	Woho, the default configuration is not only parsable, but
	runnable!
	
2004-10-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	* flumotion/manager/main.py:
	* flumotion/worker/Makefile.am:
	* flumotion/worker/job.py:
	* flumotion/worker/launcher.py:
	* flumotion/worker/main.py:
	  synchronize more options
	  make admin client log in with ssl as well

2004-10-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/manager/flumotion.pem:
	  add a dummy cert
	* configure.ac:
	  add SYSCONFDIR
	* flumotion/config/installed.py.in:
	* flumotion/config/uninstalled.py.in:
	  add configdir
	* flumotion/manager/main.py:
	* flumotion/twisted/cred.py:
	* flumotion/worker/job.py:
	* flumotion/worker/launcher.py:
	* flumotion/worker/main.py:
	* flumotion/worker/worker.py:
	  implement SSL option (-t on worker and manager)

2004-10-13  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/Makefile.am: Add setup.py

	* configure.ac:
	* data/glade/wizard_overlay.glade:
	* flumotion/component/Makefile.am:
	* flumotion/component/encoders/jpeg.py:
	* flumotion/component/encoders/mulaw.py:
	* flumotion/component/encoders/smoke.py:
	* flumotion/component/encoders/speex.py:
	* flumotion/component/encoders/theora.py: